--- a/game.html
+++ b/game.html
@@ -1,5 +1,4 @@
-<!-- With help of rand function 0-5 sec a rando div will come  -->
-<!-- Main task - after clicked again start everything is not resetting. i.e exit from function after game over-->
+<!-- After game over complete reset is not happening, score is more than 1st time-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
